--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-instantsearch": "3.0.0-beta.2",
     "core-js": "2.6.7",
     "instantsearch.js": "3.7.0",
+    "ngx-owl-carousel-o": "^2.0.1",
     "rxjs": "6.2.0",
     "zone.js": "0.9.1"
   },
